[package]
name = "gprs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.1"
rayon = "1.5.3"
itertools = "0.10.5"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
nalgebra = { version = "0.31.1", features = ["rand"] }

[[bench]]
name = "rbf_kernel"
harness = false
